fixed uuid error and got the rest of the functions working

--- a/Develop/public/package.json
+++ b/Develop/public/package.json
@@ -10,7 +10,9 @@
     "license": "ISC",
     "dependencies": {
       "express": "^4.16.4",
-      "uuid": "^8.3.0"
+      "uuid": "^8.3.0",
+      "v1": "^1.0.0",
+      "v4": "0.0.1"
     }
   }
   
